# lolnotifier-bot

./: .coverage  .coveragerc  .env.example  .gitignore  AI_AGENT_REVIEW_SKILL.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SKILL_AI_REVIEW.md  TODO.md  TODO_compliance.md  TODO_dev_key_safe.md  TODO_riot_id.md  config.py  conftest.py  coverage.json  database.py  docker-compose.yml  formatter.py  functional_test_suite.py  get_user_id_and_send.py  handlers.py  instrucciones_usuario.md  logging_setup.py  main.py  poller.py  pro_players.py  pyproject.toml  pytest.ini  requirements.txt  riot_account.py  riot_api.py  stats.py  test_riot_key.py
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: azure_openai_tf_check.py
.github/workflows/: azure-openai-tf-check.yml  ci.yml  codeql.yml  compliance-report.yml  release.yml  terraform-pr.yml  terraform.yml
controls/: MCSB-control-matrix.md
controls/azure-aks/: controls.md
controls/azure-key-vault/: controls.md
docs/: architecture.md  azure-deployment.md  cicd-workflow.md  coverage-report.md  data-model.md  dev-key-constraints.md  future-improvements.md  message-templates.md  release-plan.md  release-summary.md  terraform-deployment-guide.md  test-coverage.md
scripts/: database.py_additions  force_notification.py  full_account_info.py  main_docker.py  riot_test_suite.py  telegram_test_message.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_formatter.py  test_handlers.py  test_poller.py  test_riot_api.py  test_stats.py
(+39 files in other folders)
