[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lolnotifier-bot"
version = "5.0.0"
description = "Telegram bot that tracks League of Legends matches for users and pro players"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "aiohttp>=3.13",
    "aiosqlite>=0.22",
    "python-dotenv>=1.2",
    "tenacity>=9.1",
    "python-telegram-bot>=20.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]

[project.scripts]
lolnotifier = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.ruff]
exclude = ["scripts/", "tests/functional/", "functional_test_suite.py"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
